--- a/assets/src/css/prismjs.css
+++ b/assets/src/css/prismjs.css
@@ -2,19 +2,18 @@
  *
  * 代码高亮
  *
- * http://prismjs.com/download.html?themes=prism&languages=markup+css+clike+javascript+bash+css-extras+git+ini+json+nginx+php+php-extras+pug+sql+wiki&plugins=highlight-keywords+data-uri-highlight
+ * PrismJS 1.14.0
+ * https://prismjs.com/download.html?#themes=prism&languages=markup+css+clike+javascript+apacheconf+c+csharp+bash+cpp+ruby+css-extras+markup-templating+git+http+hpkp+hsts+ini+java+json+less+lua+markdown+nginx+objectivec+php+php-extras+sql+properties+protobuf+pug+python+jsx+typescript+sass+scss+plsql+stylus+swift+tsx+wasm+wiki+yaml&plugins=line-numbers+toolbar+highlight-keywords+data-uri-highlight+show-language
  *
  * @author  MaiCong <i@maicong.me>
  * @link    https://github.com/maicong/stay
- * @since   1.0.0
+ * @since   1.5.5
  *
  */
 
 code[class*="lang-"],
 pre[class*="lang-"] {
-  color: #666;
-  line-height: 1.5;
-  text-shadow: 0 1px #fff;
+	color: #666;
   white-space: pre;
   word-spacing: normal;
   word-break: normal;
@@ -23,19 +22,26 @@ pre[class*="lang-"] {
   hyphens: none;
 }
 
+@media print {
+	code[class*="lang-"],
+	pre[class*="lang-"] {
+		text-shadow: none;
+	}
+}
+
 .token.comment,
 .token.prolog,
 .token.doctype,
 .token.cdata {
-  color: slategray;
+	color: slategray;
 }
 
 .token.punctuation {
-  color: #999;
+	color: #999;
 }
 
 .namespace {
-  opacity: .7;
+	opacity: .7;
 }
 
 .token.property,
@@ -45,7 +51,7 @@ pre[class*="lang-"] {
 .token.constant,
 .token.symbol,
 .token.deleted {
-  color: #905;
+	color: #905;
 }
 
 .token.selector,
@@ -54,43 +60,117 @@ pre[class*="lang-"] {
 .token.char,
 .token.builtin,
 .token.inserted {
-  color: #690;
+	color: #690;
 }
 
 .token.operator,
 .token.entity,
 .token.url,
-.language-css .token.string,
+.lang-css .token.string,
 .style .token.string {
-  color: #a67f59;
-  background: hsla(0, 0%, 100%, .5);
+	color: #9a6e3a;
+	background: hsla(0, 0%, 100%, .5);
 }
 
 .token.atrule,
 .token.attr-value,
 .token.keyword {
-  color: #07a;
+	color: #07a;
 }
 
-.token.function {
-  color: #DD4A68;
+.token.function,
+.token.class-name {
+	color: #DD4A68;
 }
 
 .token.regex,
 .token.important,
 .token.variable {
-  color: #e90;
+	color: #e90;
 }
 
 .token.important,
 .token.bold {
-  font-weight: bold;
+	font-weight: bold;
 }
-
 .token.italic {
-  font-style: italic;
+	font-style: italic;
 }
 
 .token.entity {
-  cursor: help;
+	cursor: help;
+}
+
+pre[class*="lang-"].line-numbers {
+	position: relative;
+	counter-reset: linenumber;
+}
+
+pre[class*="lang-"].line-numbers > code {
+  position: relative;
+  padding: 1PX 0;
+	white-space: inherit;
+}
+
+.line-numbers .line-numbers-rows {
+	position: absolute;
+	pointer-events: none;
+	top: 0;
+	left: -3.5rem;
+	width: 3rem;
+	letter-spacing: -1PX;
+	border-right: 1PX solid #e6e6e6;
+	user-select: none;
+}
+
+.line-numbers-rows > span {
+	display: block;
+	pointer-events: none;
+	counter-increment: linenumber;
+}
+
+.line-numbers-rows > span:before {
+	content: counter(linenumber);
+	color: #ccc;
+	display: block;
+	padding-right: .5rem;
+	text-align: right;
+}
+
+.code-toolbar {
+	position: relative;
+}
+
+.code-toolbar > .toolbar {
+	position: absolute;
+	top: 12px;
+  right: 12px;
+  user-select: none;
+}
+
+.code-toolbar > .toolbar .toolbar-item {
+	display: inline-block;
+}
+
+.code-toolbar > .toolbar a {
+	cursor: pointer;
+}
+
+.code-toolbar > .toolbar button {
+	border: 0;
+	background: none;
+	color: inherit;
+	font: inherit;
+	line-height: normal;
+	overflow: visible;
+	padding: 0;
+	user-select: none;
+}
+
+.code-toolbar > .toolbar a,
+.code-toolbar > .toolbar button,
+.code-toolbar > .toolbar span {
+  font-size: 1.3rem;
+  color: #bbb;
+  text-transform: uppercase;
 }
