--- a/assets/src/css/stay.css
+++ b/assets/src/css/stay.css
@@ -4,7 +4,7 @@
  *
  * @author  MaiCong <i@maicong.me>
  * @link    https://github.com/maicong/stay
- * @since   1.5.5
+ * @since   1.5.6
  *
  */
 
@@ -313,7 +313,7 @@
   }
 }
 
-@media screen and (max-width: 40rem) {
+@media screen and (max-width: 480px) {
   .main .post__header {
     height: 16rem;
   }
@@ -1105,31 +1105,73 @@
 .main .post__content .mc-friends {
   display: flex;
   align-items: stretch;
-  justify-content: space-between;
   flex-wrap: wrap;
 }
 
 .main .post__content .mc-friends__item {
-  flex: 1 0 20%;
+  width: 20%;
   margin-bottom: 9px;
 }
-
+@media screen and (max-width: 960px) {
+  .main .post__content .mc-friends__item {
+    width: 25%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .main .post__content .mc-friends__item {
+    width: 33.333%;
+  }
+}
+@media screen and (max-width: 680px) {
+  .main .post__content .mc-friends__item {
+    width: 50%;
+  }
+}
+@media screen and (max-width: 480px) {
+  .main .post__content .mc-friends__item {
+    width: 100%;
+  }
+}
 .main .post__content .mc-link {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
+  flex-direction: column;
   height: 100%;
-  padding: 9px 6px;
-  text-align: center;
-  cursor: pointer;
-  border: 1PX solid #bbb;
-  box-shadow: 1PX 1PX 3px 0 rgba(0, 0, 0, .2);
+  padding: 6px;
+  border: 1PX solid #eee;
   border-radius: 3px;
   box-sizing: border-box;
+  transition: border-color .3s;
+}
+
+.main .post__content .mc-link__name {
+  display: block;
+  font-size: 18px;
+  font-weight: 400;
+  color: #666;
+  transition: all .3s;
+}
+
+.main .post__content .mc-link__title {
+  display: block;
+  font-size: 14px;
+  margin-top: 5px;
+  color: #999;
+}
+
+.main .post__content .mc-link__title:empty {
+  display: none;
 }
 
 .main .post__content .mc-link:hover {
-  border-color: #08d;
+  text-decoration: none;
+  border-color: #999;
+}
+
+.main .post__content .mc-link:hover .mc-link__name {
+  font-weight: 600;
+  color: #333;
 }
 
 .main .post__content .mc-audio {
